tenants/ori3com/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ori3com-web-service
  namespace: coachlibre
  labels:
    app: ori3com-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: ori3com-web
