tenants/ori3com/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ori3com-web-ingress
  namespace: coachlibre
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: coachlibre.infra.ori3com.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ori3com-web-service
            port:
              number: 80
